[gd_scene load_steps=16 format=3 uid="uid://bqx1udn3gwamm"]

[ext_resource type="Script" path="res://scripts/enemy_angel.gd" id="1_e067h"]
[ext_resource type="Texture2D" uid="uid://81adcqyj5y7b" path="res://assets/characters/Adam_run_16x16.png" id="2_2bmbt"]
[ext_resource type="AudioStream" uid="uid://c0ys77y2pis63" path="res://assets/SFX/Giant Boulder Slide Loop A.wav" id="3_hyexh"]
[ext_resource type="AudioStream" uid="uid://frr4ng78hjxi" path="res://assets/SFX/Large Stones Drag B.wav" id="4_smyan"]

[sub_resource type="CircleShape2D" id="CircleShape2D_jqcjm"]
radius = 19.5

[sub_resource type="Gradient" id="Gradient_bn7wx"]
offsets = PackedFloat32Array(0, 0.311688, 0.818182)
colors = PackedColorArray(1, 1, 1, 1, 0.76662, 0.76662, 0.76662, 0.551948, 0, 0, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_d30ln"]
gradient = SubResource("Gradient_bn7wx")
width = 500
height = 500
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.8, 0.2)

[sub_resource type="CircleShape2D" id="CircleShape2D_c1ou6"]
radius = 24.3311

[sub_resource type="AtlasTexture" id="AtlasTexture_bywam"]
atlas = ExtResource("2_2bmbt")
region = Rect2(0, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_erbtw"]
atlas = ExtResource("2_2bmbt")
region = Rect2(16, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_53ram"]
atlas = ExtResource("2_2bmbt")
region = Rect2(32, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lly1n"]
atlas = ExtResource("2_2bmbt")
region = Rect2(48, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_utrnh"]
atlas = ExtResource("2_2bmbt")
region = Rect2(64, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ksyi"]
atlas = ExtResource("2_2bmbt")
region = Rect2(80, 0, 16, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_s1qsy"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bywam")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_erbtw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_53ram")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lly1n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_utrnh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ksyi")
}],
"loop": true,
"name": &"run",
"speed": 5.0
}]

[node name="enemy angel" type="CharacterBody2D" node_paths=PackedStringArray("cooldown_timer", "nav", "moving_sound", "stopping_sound", "animation", "time_alive_timer")]
collision_layer = 2
script = ExtResource("1_e067h")
cooldown_timer = NodePath("cooldown timer")
nav = NodePath("NavigationAgent2D")
moving_sound = NodePath("moving sound")
stopping_sound = NodePath("stopping sound")
animation = NodePath("transform node/AnimatedSprite2D")
time_alive_timer = NodePath("time alive")
time_alive = 300

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.5, -9.965)
shape = SubResource("CircleShape2D_jqcjm")

[node name="cooldown timer" type="Timer" parent="."]
one_shot = true

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]

[node name="nav update timer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="moving sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_hyexh")
volume_db = 15.0
pitch_scale = 0.8
max_distance = 1500.0
attenuation = 8.28209
bus = &"SFX"

[node name="stopping sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_smyan")
max_distance = 1500.0
bus = &"SFX"

[node name="emergency backup light" type="PointLight2D" parent="."]
visible = false
position = Vector2(0, -14)
color = Color(1, 1, 1, 0.360784)
shadow_enabled = true
texture = SubResource("GradientTexture2D_d30ln")

[node name="hurtbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="hurtbox"]
position = Vector2(0, -10)
shape = SubResource("CircleShape2D_c1ou6")

[node name="time alive" type="Timer" parent="."]
one_shot = true

[node name="transform node" type="Node2D" parent="."]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="transform node"]
self_modulate = Color(0, 0, 0, 1)
texture_filter = 1
position = Vector2(0, -26)
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_s1qsy")
animation = &"run"
frame_progress = 0.276419

[connection signal="timeout" from="cooldown timer" to="." method="_on_cooldown_timer_timeout"]
[connection signal="timeout" from="nav update timer" to="." method="_on_nav_update_timer_timeout"]
[connection signal="finished" from="moving sound" to="." method="_on_moving_sound_finished"]
[connection signal="body_entered" from="hurtbox" to="." method="_on_hurtbox_body_entered"]
[connection signal="timeout" from="time alive" to="." method="_on_time_alive_timeout"]
